--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: IDM250 Portfolio Theme
-Theme URI: https://github.com/mrpaulphan/idm250
-Author: Paul Phan
-Author URI: https://mrpaulphan.com
-Description: This is a custom theme built for Project 1 of IDM250.
-Tags: custom, theme, project, 1
+Theme URI: https://github.com/malnyrad/idm250-dkl67
+Author: Daryn Lam
+Author URI: https://lambda-ryn.netlify.app/
+Description: This is a custom theme built for IDM250.
+Tags: custom, theme, idm250
 Version: 1.0
 Requires at least: 6.1.1
 Tested up to: 6.1.1
